<resources>
    <string name="app_name">mobilePay</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="forget_password_prompt">Forget Password?</string>
    <string name="login_promopt">Login</string>


    <!--related to register-->
    <string name="register_prompt">Register</string>
    <string name="first_name_prompt">First Name</string>
    <string name="family_name_prompt">Family Name</string>
    <string name="confirm_password_prompt">Confirm Password</string>
    <string name="next_prompt">next</string>
    <string name="first_name_empty_prompt">First name can\'t be empty</string>
    <string name="first_name_whiterspace_prompt">First name can\'t contain whiter space</string>
    <string name="family_name_empty_prompt">Family name can\'t be empty</string>
    <string name="family_name_whiterspace_prompt">Family name can\'t contain whiter space</string>
    <string name="nationality_prompt">Nationality</string>
    <string name="id_number_prompt">ID Number</string>
    <string name="select_nationality_prompt">Please Select Nationality</string>
    <string name="input_IDNumber_prompt">Please Input Your ID Number</string>
    <string name="upload_document_ID_prompt">Please Upload Your ID Photo</string>


    <!--related to register part 2-->
    <string name="add_your_mobile_phone_PROMPT">Add your mobile phone number</string>
    <string name="we_ll_need_to_confirm_it_by_sending_a_text_prompt">We\'ll need to confirm it by sending a text</string>
    <string name="code_prompt">code</string>
    <string name="mobile_number_prompt">Mobile number</string>
    <string name="country_region_prompt">Country or Region</string>
    <string name="send_prompt">Send</string>
    <string name="verify_code_prompt">Verify Code</string>
    <string name="add_your_email_prompt">Add your email</string>
    <string name="email_prompt">Email</string>
    <string name="upload_prompt">Upload</string>
    <string name="upload_text">Upload your ID image</string>
    <string name="collect_Id_prompt">We\'ll collect your ID document to verify you, please upload your ID document</string>
    <string name="select_code_prompt">Please select Phone code</string>
    <string name="incorrect_phone_number_prompt">Incorrect Phone Number</string>
    <string name="incorrect_verify_code_prompt">Incorrect Verify Code</string>
    <string name="incorrect_email_prompt">Incorrect Email</string>


    <string name="set_login_password_prompt">Set Your Login Password</string>
    <string name="set_your_payment_password_prompt">Set Your Payment Password</string>
    <string name="finish_register_prompt">Finish</string>

    <string name="password_not_same_prompt">Password not same</string>

    <!--Final Part-->
    <string name="wait_prompt">We will verify your submitted form.We will notify you via your email and your phone number submitted as soon as your information has been checked.Usually it takes no more than 7 days</string>
    <string name="your_phone_number_prompt">Your Phone Number: %s</string>
    <string name="your_email_prompt">Your Email: %s</string>
    <string name="thanks_for_your_usage_prompt">Thanks For Your Usage</string>
    <string name="close_prompt">Close</string>


    <!-- related to main page after login -->
    <string name="pay_prompt">Pay</string>
    <string name="transfer_prompt">Transfer</string>
    <string name="receive_prompt">Receive</string>
    <string name="scan_amp_pay_prompt"><![CDATA[Scan & Pay]]></string>
    <string name="request_prompt">Request</string>
    <string name="your_balance_prompt">Your Balance</string>
    <string name="transfer_search_prompt">Enter mobile no, email, name</string>
    <string name="Br_balance">Br. %s</string>
    <string name="Byn_format">%s BYN</string>
    <string name="bill_prompt">Bill</string>
    <string name="frozen_format">%s BYN Frozen</string>
    <string name="import_prompt">import</string>
    <string name="export_prompt">Export</string>
    <string name="amount_promt">Amount</string>
    <string name="remarks_prompt">remarks, maximum 40 characters</string>
    <string name="empty_amount_prompt">Please input amount</string>

    <!-- Related with successful payment result -->
    <string name="successfully_paid_prompt">Success</string>
    <string name="balance_prompt">Balance</string>
    <string name="receiver">Receiver:</string>
    <string name="okay">Okay</string>
    <string name="clear">Clear History</string>
    <string name="not_found">Opps! We can\'t find that</string>

    <!-- Related with qr code receive  -->
    <string name="user_receive_qr_code">User Receive QR Code</string>
    <string name="merchant_receive_qr_code">Merchant Receive QR Code</string>
    <string name="switch_prompt">Switch</string>


    <!-- Related with bill-->
    <string name="filter">Filter</string>
    <string name="statistics">Statistics</string>
    <string name="action_and_name">%s - %s</string>
    <string name="no_record_found">Opps! You Have No Bill</string>
    <string name="bill_type">Bill Type</string>
    <string name="export">Export</string>
    <string name="pay">Pay</string>
    <string name="refunded">Refunded</string>
    <string name="transfer_in">Transfer In</string>
    <string name="transfer_out">Transfer Out</string>
    <string name="minimum_amount">minimum amount</string>
    <string name="maximum_amount">maximum amount</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>

    <!-- related with bill detail -->
    <string name="id">ID</string>
    <string name="time">Time</string>
    <string name="remarks">Remarks</string>
    <string name="refunded_date">Refunded Date</string>
    <string name="refund">Refund</string>
    <string name="back">Back</string>


    <!-- Related with merchant registeration-->
    <string name="company_organization_name">Company/Organization Name</string>
    <string name="company_organization_license_number">Company/Organization License Number</string>
    <string name="collect_company_license_photo_prompt">We\'ll collect your Company License Photo to verify, please upload your License photo</string>
    <string name="add_your_phone">Add Your Phone</string>
    <string name="useSamePhoneNumberPrompt">I want to use the same phone number with my individual account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_your_email">Add Your Email</string>
    <string name="useSameEmailPrompt">I want to use the same email with my individual account</string>
    <string name="upload_license">Upload your license image</string>
    <string name="you_don_t_have_a_company_organization_account">You don\'t have a company/organization account</string>
    <string name="apply">Apply</string>
    <string name="log_out">Log out</string>


    <string name="user_detail">User Detail</string>
    <string name="merchant_detail">Merchant Detail</string>


    <string name="credit_debit_card">Credit/Debit Card</string>
    <string name="card_number">Card Number</string>
    <string name="import_">Import</string>
    <string name="mm">MM</string>
    <string name="slash">/</string>
    <string name="yy">YY</string>
    <string name="cvc">CVC</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="security_code">Security Code</string>


    <string name="available_amount">Available: %s BYN</string>
    <string name="merchant_account_waiting_for_verification">Merchant Account Waiting for Verification</string>


</resources>