<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.example.mobilepay.ui.mainPage.ImportViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.mainPage.ImportFragment">

        <TextView
            android:id="@+id/textView42"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/credit_debit_card"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardNumberInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/card_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView42">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/importBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/import_"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardNumberInputLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardNumberInputLayout"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <EditText
            android:hint="@string/mm"
            android:id="@+id/month"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintStart_toStartOf="@+id/textView47"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/expiration_date"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textView42"
            app:layout_constraintTop_toBottomOf="@+id/cardNumberInputLayout" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:gravity="center|center_horizontal"
            android:text="@string/slash"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/month"
            app:layout_constraintStart_toEndOf="@+id/month"
            app:layout_constraintTop_toTopOf="@+id/month" />

        <EditText
            android:hint="@string/yy"
            android:id="@+id/year"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="numberSigned"
            app:layout_constraintBottom_toBottomOf="@+id/month"
            app:layout_constraintStart_toEndOf="@+id/textView49"
            app:layout_constraintTop_toTopOf="@+id/month" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/security_code"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/cardNumberInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textView47" />

        <EditText
            android:hint="@string/cvc"
            android:maxLength="3"
            android:id="@+id/CVC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ems="10"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="@+id/year"
            app:layout_constraintEnd_toEndOf="@+id/textView52"
            app:layout_constraintStart_toStartOf="@+id/textView52"
            app:layout_constraintTop_toTopOf="@+id/year" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="@+id/cardNumberInputLayout"
            app:layout_constraintStart_toStartOf="@+id/cardNumberInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/month">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amountInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/amount"
            app:layout_constraintEnd_toEndOf="@+id/cardNumberInputLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/cardNumberInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/nameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:visibility="@{viewModel.isLoading?View.VISIBLE:View.GONE}"
            tools:visibility="gone"
            android:id="@+id/progressBar4"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>