<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="billFragment"
            type="com.example.mobilepay.ui.mainPage.BillFragment" />
        <variable
            name="filterDialog"
            type="com.example.mobilepay.ui.mainPage.BillFragment.FilterDialog" />

        <import type="com.example.mobilepay.entity.BillType"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/billType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/bill_type"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/userBillSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:columnCount="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/billType"
            app:rowCount="3"
            app:useDefaultMargins="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grayc4"
                android:textColor="@{filterDialog.setClickedColor(BillType.import_from_merchant,BillType.import_from_user)}"
                android:text="@string/import_prompt"
                android:onClick="@{(view) -> filterDialog.importClick(view)}"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grayc4"
                android:text="@string/export"
                android:onClick="@{(view) -> filterDialog.exportClick(view)}"
                android:textColor="@{filterDialog.setClickedColor(BillType.export_to_merchant,BillType.export_to_user)}"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="0"
                app:layout_rowWeight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grayc4"
                android:text="@string/pay"
                android:onClick="@{(view) -> filterDialog.payClick(view)}"
                android:textColor="@{filterDialog.setClickedColor(BillType.pay,BillType.pay)}"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grayc4"
                android:text="@string/refunded"
                app:layout_column="1"
                android:onClick="@{(view) -> filterDialog.refundedClick(view)}"
                android:textColor="@{filterDialog.setClickedColor(BillType.pay,BillType.pay)}"
                app:layout_columnWeight="1"
                app:layout_row="1"
                app:layout_rowWeight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/grayc4"
                android:text="@string/transfer_in"
                android:onClick="@{(view) -> filterDialog.transferInClick(view)}"
                android:enabled="@{billFragment.isUser()}"
                android:textColor="@{filterDialog.setClickedColor(BillType.transfer_in,(BillType)null)}"
                app:layout_column="0"
                app:layout_columnWeight="1"
                app:layout_row="2"
                app:layout_rowWeight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{billFragment.isUser()}"
                android:backgroundTint="@color/grayc4"
                android:onClick="@{(view) -> filterDialog.transferOutClick(view)}"
                android:text="@string/transfer_out"
                android:textColor="@{filterDialog.setClickedColor(BillType.transfer_out,(BillType)null)}"
                app:layout_column="1"
                app:layout_columnWeight="1"
                app:layout_row="2"
                app:layout_rowWeight="1" />

        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/amount_promt"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userBillSelect" />

        <EditText
            android:id="@+id/min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/minimum_amount"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.6" />

        <EditText
            android:id="@+id/max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/maximum_amount"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/min" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/date"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/to"
            app:layout_constraintBottom_toBottomOf="@+id/min"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/min"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:ems="10"
            android:hint="@string/start_date"
            android:onClick="@{() -> filterDialog.startClick()}"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/to"
            app:layout_constraintBottom_toBottomOf="@+id/startDate"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/startDate" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:ems="10"
            android:hint="@string/end_date"
            android:onClick="@{() -> filterDialog.endClick()}"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/startDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/startDate" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>