<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.mobilepay.ui.merchantRegister.ViewModel2" />
        <variable
            name="infoViewModel"
            type="com.example.mobilepay.ui.merchantRegister.MerchantRegisterViewModel" />

        <import type="android.view.View"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.merchantRegister.MerchantRegisterFragment2">


        <TextView
            android:id="@+id/textView40"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/add_your_phone"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/isSameEmailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/useSamePhoneNumberPrompt"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView40"
            app:layout_constraintStart_toStartOf="@+id/textView40"
            app:layout_constraintTop_toBottomOf="@+id/textView40" />


        <com.google.android.material.button.MaterialButtonToggleGroup
            app:singleSelection="true"
            android:id="@+id/toggleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/isSameEmailText"
            app:layout_constraintStart_toStartOf="@+id/isSameEmailText"
            app:layout_constraintTop_toBottomOf="@+id/isSameEmailText">


            <Button
                android:id="@+id/yes"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetRight="5dp"
                android:text="@string/yes" />

            <Button
                android:id="@+id/no"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:insetRight="0dp"
                android:text="@string/no" />
        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codeSelectLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:hint="@string/code_prompt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton">

            <AutoCompleteTextView
                android:id="@+id/codeSelect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneLayout"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/mobile_number_prompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/codeSelectLayout"
            app:layout_constraintTop_toTopOf="@+id/codeSelectLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneVerifyCodeLayout"
            style="@style/input"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/verify_code_prompt"
            app:layout_constraintEnd_toStartOf="@+id/send"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/codeSelectLayout"
            app:layout_constraintTop_toBottomOf="@+id/codeSelectLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneVerifyCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/send"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/send_prompt"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/phoneVerifyCodeLayout"
            app:layout_constraintEnd_toEndOf="@+id/phoneLayout"
            app:layout_constraintTop_toTopOf="@+id/phoneVerifyCodeLayout" />

        <Button
            android:id="@+id/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next_prompt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.useIndividualPhone?View.GONE:View.VISIBLE}"
            app:constraint_referenced_ids="codeSelectLayout,phoneVerifyCodeLayout,phoneLayout,send" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>